Fixed two bugs:
1) The Div100 work I did was not previously extended to login/signup, so overflowing was not working correctly. Added.
2) Made tour a bit more presentable on mobile devices

--- a/src/routes/NonAuthLayout/NonAuthLayout.scss
+++ b/src/routes/NonAuthLayout/NonAuthLayout.scss
@@ -1,3 +1,7 @@
+.nonAuthContainer {
+  overflow-y: auto;
+}
+
 .background {
   width: 100vw;
   height: 100vh;
@@ -129,10 +133,11 @@
 @media screen and (max-width: 600px) {
   .topRow {
     padding: 10px;
+    position: relative;
   }
 
   .background {
-    padding: 80px 0;
+    padding: 0 0 80px 0;
     width: auto;
     height: auto;
     display: block;
